HOT FIX: Force Dark Mode.

--- a/src/app.css
+++ b/src/app.css
@@ -46,10 +46,10 @@
     }
 
     .select {
-        -webkit-user-select: all;
-        -moz-user-select: all;
-        -ms-user-select: all;
-        user-select: all;
+        -webkit-user-select: initial;
+        -moz-user-select: initial;
+        -ms-user-select: initial;
+        user-select: initial;
     }
 
     .ui-glow-reset {
